--- a/sass/_breakout.scss
+++ b/sass/_breakout.scss
@@ -28,6 +28,9 @@ body {
   color: #fff;
   //min-height: 190px;
   text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.5);
+  .container {
+    height: 100%;
+  }
   i.material-icons {
     font-size: 88px;
   }
@@ -49,6 +52,34 @@ body {
   }
   a {
     color: #fff;
+  }
+  
+  .videoTeaser {
+    position: relative;
+    a {
+      position: absolute;
+      top: 50%;
+      transform: translate(0,-50%);
+    }
+    div {
+      display: block;
+      position: relative;
+      margin-left: 100px;
+      top: 50%;
+      transform: translate(0,-50%);
+      h2:first-child {
+        margin-top:0;
+      }
+      h2:last-child {
+        margin-bottom: 0;
+      }
+    }
+  }
+  
+  .quotes {
+     position: relative;
+      top: 50%;
+      transform: translate(0,-50%);
   }
 }
 
